// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates custom loot tables: parsed loot table 1`] = `
{
  "pools": [
    {
      "entries": [
        {
          "children": [
            {
              "name": "minecraft:diamond",
              "type": "minecraft:item",
            },
          ],
          "type": "minecraft:alternatives",
        },
        {
          "name": "minecraft:logs",
          "type": "minecraft:tag",
        },
      ],
      "rolls": 4,
    },
  ],
  "type": "minecraft:block",
}
`;

exports[`loot table removal removes loot table with output filter: loot tables containing any log 1`] = `
[
  "data/minecraft/loot_tables/blocks/acacia_log.json",
  "data/minecraft/loot_tables/blocks/acacia_wood.json",
  "data/minecraft/loot_tables/blocks/birch_log.json",
  "data/minecraft/loot_tables/blocks/birch_wood.json",
  "data/minecraft/loot_tables/blocks/crimson_hyphae.json",
  "data/minecraft/loot_tables/blocks/crimson_stem.json",
  "data/minecraft/loot_tables/blocks/dark_oak_log.json",
  "data/minecraft/loot_tables/blocks/dark_oak_wood.json",
  "data/minecraft/loot_tables/blocks/jungle_log.json",
  "data/minecraft/loot_tables/blocks/jungle_wood.json",
  "data/minecraft/loot_tables/blocks/oak_log.json",
  "data/minecraft/loot_tables/blocks/oak_wood.json",
  "data/minecraft/loot_tables/blocks/spruce_log.json",
  "data/minecraft/loot_tables/blocks/spruce_wood.json",
  "data/minecraft/loot_tables/blocks/stripped_acacia_log.json",
  "data/minecraft/loot_tables/blocks/stripped_acacia_wood.json",
  "data/minecraft/loot_tables/blocks/stripped_birch_log.json",
  "data/minecraft/loot_tables/blocks/stripped_birch_wood.json",
  "data/minecraft/loot_tables/blocks/stripped_crimson_hyphae.json",
  "data/minecraft/loot_tables/blocks/stripped_crimson_stem.json",
  "data/minecraft/loot_tables/blocks/stripped_dark_oak_log.json",
  "data/minecraft/loot_tables/blocks/stripped_dark_oak_wood.json",
  "data/minecraft/loot_tables/blocks/stripped_jungle_log.json",
  "data/minecraft/loot_tables/blocks/stripped_jungle_wood.json",
  "data/minecraft/loot_tables/blocks/stripped_oak_log.json",
  "data/minecraft/loot_tables/blocks/stripped_oak_wood.json",
  "data/minecraft/loot_tables/blocks/stripped_spruce_log.json",
  "data/minecraft/loot_tables/blocks/stripped_spruce_wood.json",
  "data/minecraft/loot_tables/blocks/stripped_warped_hyphae.json",
  "data/minecraft/loot_tables/blocks/stripped_warped_stem.json",
  "data/minecraft/loot_tables/blocks/warped_hyphae.json",
  "data/minecraft/loot_tables/blocks/warped_stem.json",
  "data/minecraft/loot_tables/chests/pillager_outpost.json",
  "data/minecraft/loot_tables/chests/spawn_bonus_chest.json",
  "data/minecraft/loot_tables/chests/village/village_taiga_house.json",
]
`;

exports[`loot tables output replacements removes outputs: modified deepslate_iron_ore loot table 1`] = `
{
  "pools": [
    {
      "bonus_rolls": 0,
      "entries": [
        {
          "children": [
            {
              "conditions": [
                {
                  "condition": "minecraft:match_tool",
                },
              ],
              "type": "minecraft:empty",
            },
            {
              "functions": [
                {
                  "function": "minecraft:apply_bonus",
                },
                {
                  "function": "minecraft:explosion_decay",
                },
              ],
              "name": "minecraft:raw_iron",
              "type": "minecraft:item",
            },
          ],
          "type": "minecraft:alternatives",
        },
      ],
      "rolls": 1,
    },
  ],
  "type": "minecraft:block",
}
`;

exports[`loot tables output replacements removes outputs: modified iron_ore loot table 1`] = `
{
  "pools": [
    {
      "bonus_rolls": 0,
      "entries": [
        {
          "children": [
            {
              "conditions": [
                {
                  "condition": "minecraft:match_tool",
                },
              ],
              "type": "minecraft:empty",
            },
            {
              "functions": [
                {
                  "function": "minecraft:apply_bonus",
                },
                {
                  "function": "minecraft:explosion_decay",
                },
              ],
              "name": "minecraft:raw_iron",
              "type": "minecraft:item",
            },
          ],
          "type": "minecraft:alternatives",
        },
      ],
      "rolls": 1,
    },
  ],
  "type": "minecraft:block",
}
`;

exports[`loot tables output replacements replaces outputs with additional tests: modified husk loot table 1`] = `
{
  "pools": [
    {
      "bonus_rolls": 0,
      "entries": [
        {
          "functions": [
            {
              "function": "minecraft:set_count",
            },
            {
              "function": "minecraft:looting_enchant",
            },
          ],
          "name": "minecraft:rotten_flesh",
          "type": "minecraft:item",
        },
      ],
      "rolls": 1,
    },
    {
      "bonus_rolls": 0,
      "conditions": [
        {
          "condition": "minecraft:killed_by_player",
        },
        {
          "condition": "minecraft:random_chance_with_looting",
        },
      ],
      "entries": [
        {
          "name": "forge:ingots/lead",
          "type": "minecraft:tag",
        },
        {
          "name": "minecraft:carrot",
          "type": "minecraft:item",
        },
        {
          "functions": [
            {
              "function": "minecraft:furnace_smelt",
            },
          ],
          "name": "minecraft:potato",
          "type": "minecraft:item",
        },
      ],
      "rolls": 1,
    },
  ],
  "type": "minecraft:entity",
}
`;

exports[`loot tables output replacements replaces outputs with additional tests: modified iron_golem loot table 1`] = `
{
  "pools": [
    {
      "bonus_rolls": 0,
      "entries": [
        {
          "functions": [
            {
              "function": "minecraft:set_count",
            },
          ],
          "name": "minecraft:poppy",
          "type": "minecraft:item",
        },
      ],
      "rolls": 1,
    },
    {
      "bonus_rolls": 0,
      "entries": [
        {
          "functions": [
            {
              "function": "minecraft:set_count",
            },
          ],
          "name": "forge:ingots/lead",
          "type": "minecraft:tag",
        },
      ],
      "rolls": 1,
    },
  ],
  "type": "minecraft:entity",
}
`;

exports[`loot tables output replacements replaces outputs with additional tests: modified zombie loot table 1`] = `
{
  "pools": [
    {
      "bonus_rolls": 0,
      "entries": [
        {
          "functions": [
            {
              "function": "minecraft:set_count",
            },
            {
              "function": "minecraft:looting_enchant",
            },
          ],
          "name": "minecraft:rotten_flesh",
          "type": "minecraft:item",
        },
      ],
      "rolls": 1,
    },
    {
      "bonus_rolls": 0,
      "conditions": [
        {
          "condition": "minecraft:killed_by_player",
        },
        {
          "condition": "minecraft:random_chance_with_looting",
        },
      ],
      "entries": [
        {
          "name": "forge:ingots/lead",
          "type": "minecraft:tag",
        },
        {
          "name": "minecraft:carrot",
          "type": "minecraft:item",
        },
        {
          "functions": [
            {
              "function": "minecraft:furnace_smelt",
            },
          ],
          "name": "minecraft:potato",
          "type": "minecraft:item",
        },
      ],
      "rolls": 1,
    },
  ],
  "type": "minecraft:entity",
}
`;

exports[`loot tables output replacements replaces outputs with additional tests: modified zombie_villager loot table 1`] = `
{
  "pools": [
    {
      "bonus_rolls": 0,
      "entries": [
        {
          "functions": [
            {
              "function": "minecraft:set_count",
            },
            {
              "function": "minecraft:looting_enchant",
            },
          ],
          "name": "minecraft:rotten_flesh",
          "type": "minecraft:item",
        },
      ],
      "rolls": 1,
    },
    {
      "bonus_rolls": 0,
      "conditions": [
        {
          "condition": "minecraft:killed_by_player",
        },
        {
          "condition": "minecraft:random_chance_with_looting",
        },
      ],
      "entries": [
        {
          "name": "forge:ingots/lead",
          "type": "minecraft:tag",
        },
        {
          "name": "minecraft:carrot",
          "type": "minecraft:item",
        },
        {
          "functions": [
            {
              "function": "minecraft:furnace_smelt",
            },
          ],
          "name": "minecraft:potato",
          "type": "minecraft:item",
        },
      ],
      "rolls": 1,
    },
  ],
  "type": "minecraft:entity",
}
`;
